--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
       <div id="header">
         <nav>
-          <li class="fork"><a href="https://www.facebook.com/anil.kakamari">Facebook</a></li>
+          <li class="fork"><a href="https://www.facebook.com/anil.kakamari" target="_blank">Facebook</a></li>
         </nav>
       </div><!-- end header -->
 
