--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         </div>
 
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects.
-Author your page content here <a href="https://guides.github.com/features/mastering-markdown/"></p>
+<a class="anchor"  aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My Work Examples</h3>
+<ul style="list-style-type:circle">
+  <li><a class="anchor" href="https://anilkakamari.github.io/bootstrap-try" target="_blank" aria-hidden="true">Bootstrap Try</a></li>
+</ul>
 
   </section>
 
