Update Clothshop Demo

--- a/clothshop-demo/index.html
+++ b/clothshop-demo/index.html
@@ -219,13 +219,13 @@
                     <img class="logo-icon img-center" alt="Logo" src="images/logo-icon1.jpg">
                 </a>
 
-                <p class="credit-note"><span>Designed By</span><a href="http://santoshparashetti.me/" target="_blank">Santosh Parashetti</a></p>
+                <p class="credit-note"><span>Designed By</span><a href="http://www.anilkakamari.in/" target="_blank">Anil Kakamari</a></p>
 
             </div>  
 
             <div class="col-md-4  center-block">
                 <div class="footer-menu">
-                   <p> Copyrights <span class="glyphicon glyphicon-copyright-mark"></span>2015 Let's SHOP, All Rights Reserved.</p>
+                   <p> Copyrights <span class="glyphicon glyphicon-copyright-mark"></span>2016 Let's SHOP, All Rights Reserved.</p>
 
                 </div>
             </div>
