Update Landing App Page

--- a/landing-app-page/index.html
+++ b/landing-app-page/index.html
@@ -105,7 +105,7 @@
 
 		<footer id="footer">
 			<div class="container-fluid col-md-12">
-					<h3 id="footer-note"><span class="glyphicon glyphicon-copyright-mark"></span>  All Rights Reserved. 2014-2015 <br/><br/>Tweet Me <a href="https://www.twitter.com/santuparashetti" target="_blank">@santuparashetti</a></h3>
+					<h3 id="footer-note"><span class="glyphicon glyphicon-copyright-mark"></span>  All Rights Reserved. 2015-2016<br/><br/>Tweet Me <a href="https://twitter.com/anilkakamari121" target="_blank">@anilkakamari</a></h3>
 							
 			</div>
 		</footer> 
