--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 <a class="anchor"  aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>My Work Examples</h3>
 <ul style="list-style-type:circle">
   <li><a class="anchor" href="https://anilkakamari.github.io/bootstrap-try" target="_blank" aria-hidden="true">Bootstrap Try</a></li>
+  <li><a class="anchor" href="https://anilkakamari.github.io/clothshop-demo" target="_blank" aria-hidden="true">Clothshop Demo</a></li>
+  <li><a class="anchor" href="https://anilkakamari.github.io/contact-form" target="_blank" aria-hidden="true">Contact Form</a></li>
+  <li><a class="anchor" href="https://anilkakamari.github.io/landing-app-page" target="_blank" aria-hidden="true">Landing AppPage</a></li>
 </ul>
 
   </section>
